--- a/about.css
+++ b/about.css
@@ -31,8 +31,9 @@ main {
 }
 
 .abt img {
-    width: 50%;
-    margin-left: 120px;
+    width: 75em;
+    height: 30em;
+    margin-left: 42px;
 }
 
 .about:after {
@@ -103,6 +104,12 @@ main {
         float: left;
         margin-left: 15px;
         margin-bottom: 32px;
+    }
+
+    .abt img {
+        width: 100%;
+        height: 90%;
+        margin-left: 42px;
     }
 
 
