--- a/about.css
+++ b/about.css
@@ -107,11 +107,15 @@ main {
     }
 
     .abt img {
-        width: 100%;
-        height: 90%;
+        width: 110%;
+        height: 110%;
         margin-left: 42px;
     }
-
+    #our img {
+        width: 30%;
+        background-color: red;
+        margin-left: 20px;
+    }
 
 
 }
