--- a/about.css
+++ b/about.css
@@ -107,9 +107,9 @@ main {
     }
 
     .abt img {
-        width: 110%;
+        width: 100%;
         height: 110%;
-        margin-left: 42px;
+        margin:0;
     }
     #our img {
         width: 30%;
