--- a/about.css
+++ b/about.css
@@ -98,6 +98,10 @@ main {
     main {
         margin-left: 10px;
     }
+
+    .about {
+        margin-top: 50px;
+    }
     .aboutt {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         max-width: 250px;
