--- a/about.css
+++ b/about.css
@@ -103,7 +103,9 @@ main {
         margin-top: 120px;
         text-align: center;
         background-color: darkgray;
-        padding: 10px;
+        padding: 20px;
+        width: 60%;
+        margin-left: 22px;
     }
 
     .about {
@@ -129,6 +131,10 @@ main {
         width: 30%;
         background-color: red;
         margin-left: 20px;
+    }
+
+    #our .light {
+        width: 70%;
     }
 
 
